--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -202,7 +202,7 @@
         -->
         <activity
             android:name=".activities.CatchoTransparentActivity"
-            android:screenOrientation="sensorLandscape" />
+            android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".custom.ProcessPhoenix"
             android:process=":phoenix"
